--- a/testimonials-grid-section-main/styles.css
+++ b/testimonials-grid-section-main/styles.css
@@ -4,7 +4,7 @@
   font-family: 'Barlow Semi Condensed';
   font-style: normal;
   font-weight: 500;
-  src: url('../fonts/barlow-semi-condensed-v16-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('./fonts/barlow-semi-condensed-v16-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* barlow-semi-condensed-600 - latin */
 @font-face {
@@ -12,5 +12,145 @@
   font-family: 'Barlow Semi Condensed';
   font-style: normal;
   font-weight: 600;
-  src: url('../fonts/barlow-semi-condensed-v16-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('./fonts/barlow-semi-condensed-v16-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html{
+  font-size: 62.5%;
+}
+
+body{
+  font-family: 'Barlow Semi Condensed';
+  background-color:hsl(214, 17%, 92%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  line-height: 1.2;
+}
+
+p{
+  font-size: 1.2rem;
+}
+
+h3{
+  font-size: 1.7rem;
+}
+
+.grid-container{
+  max-width: 100rem;
+  display: grid;
+  grid-template-columns:repeat(4,1fr);
+  gap: 2.5rem;
+  color:hsl(0, 0%, 100%) ;
+}
+
+.grid-container__item--1{
+  grid-row:1/2 ;
+  grid-column: 1/ span 2;
+  background-color: hsl(263, 55%, 52%);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  color:  hsl(0, 0%, 81%);
+  position: relative;
+  z-index: -1;
+}
+
+.grid-container__item--2{
+  background-color: hsl(217, 19%, 35%);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.grid-container__item--3{
+  background-color: hsl(0, 0%, 100%);
+  color: hsl(217, 19%, 35%);
+  grid-column: 4/ 5 ;
+  grid-row: 1/ span 2 ;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.grid-container__item--4{
+  color: hsl(217, 19%, 35%);
+  background-color: hsl(0, 0%, 100%) ;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.grid-container__item--5{
+  background-color: hsl(219, 29%, 14%);
+  grid-row:2/3;
+  grid-column: 2/ span 2;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  color: hsl(0, 0%, 81%);
+}
+
+.grid-container__avatar--1{
+  border: 2px solid hsl(264, 82%, 80%);
+}
+
+.grid-container__avatar--5{
+  border: 2px solid hsl(263, 55%, 52%);
+}
+
+.grid-container__item{
+  padding: 2.5rem;
+  border-radius: 0.7rem;
+
+}
+
+.grid-container__details{
+  display: flex;
+  gap: 2rem;
+}
+
+.grid-container__avatar {
+  border-radius: 50%;
+  width: 3rem;
+}
+
+.grid-container__identity{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.grid-container__heading--1, .grid-container__heading--2{
+  color: hsl(214, 17%, 92%);
+} 
+
+.grid-container__message--2, .grid-container__identity--2{
+  color: hsl(0, 0%, 81%) ;
+}
+
+.grid-container__message--3{
+  color:hsl(224, 10%, 45%);
+}
+
+.grid-container__bg-pattern{
+  position: absolute;
+  top: 0;
+  right: 6rem;
+  z-index: 0;
+  width: 9rem;
+}
+
+.grid-container__heading,
+.grid-container__message,
+.grid-container__details {
+  position: relative;
+  z-index: 2;  
 }
